@@ -1,3 +1,8 @@
+2004-04-29  Robert Widhopf-Fenk  <bbdb@robf.de>
+
+	* lisp/bbdb-rmail.el: Just define rmail-buffer if not defined and
+	require other packages only during compilation.
+
 2004-03-22  Waider  <waider@waider.ie>
 
 	* lisp/bbdb-migrate.el: * Minor docstring fix (Stefan Monnier)
